@@ -69,22 +69,32 @@
             </Layer>
         </Layers>
         <Frames>
-            <StatusBar parentKey="healthbar" defaultValue="1" minValue="0" maxValue="1">
+            <StatusBar parentKey="predictionbar" defaultValue="1" minValue="0" maxValue="1">
                 <Size x="65" y="8"></Size>
                 <Anchors>
-                    <Anchor point="TOPLEFT" relativePoint="TOPLEFT" x="1" y="-67"></Anchor>
+                    <Anchor point="TOPLEFT" relativePoint="TOPLEFT" x="1" y="-68"></Anchor>
                 </Anchors>
-                <BarTexture file="Interface\AddOns\GW2_UI\textures\statusbarcolored_green"/>
-                <Layers>
-                    <Layer>
-                        <Texture parentKey="spark" file="Interface\AddOns\GW2_UI\textures\bloodspark">
-                            <Anchors>
-                                <Anchor point="RIGHT" x="0" y="0"/>
-                            </Anchors>
-                            <Size x="7" y="8"></Size>
-                        </Texture>
-                    </Layer>
-                </Layers>
+                <BarTexture file="Interface\AddOns\GW2_UI\textures\incominghealing"/>
+                <Frames>
+                    <StatusBar parentKey="healthbar" defaultValue="1" minValue="0" maxValue="1">
+                        <Size x="65" y="8"></Size>
+                        <Anchors>
+                            <Anchor point="TOPLEFT" relativePoint="TOPLEFT"></Anchor>
+                            <Anchor point="BOTTOMRIGHT" relativePoint="BOTTOMRIGHT"></Anchor>
+                        </Anchors>
+                        <BarTexture file="Interface\AddOns\GW2_UI\textures\statusbarcolored_green"/>
+                        <Layers>
+                            <Layer>
+                                <Texture parentKey="spark" file="Interface\AddOns\GW2_UI\textures\bloodspark">
+                                    <Anchors>
+                                        <Anchor point="RIGHT" x="0" y="0"/>
+                                    </Anchors>
+                                    <Size x="7" y="8"></Size>
+                                </Texture>
+                            </Layer>
+                        </Layers>
+                    </StatusBar>
+                </Frames>
             </StatusBar>
             <StatusBar parentKey="powerbar" name="$parentPowerBar" defaultValue="1" minValue="0" maxValue="1">
                 <Size x="65" y="3"></Size>
